--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </h1>
                     <p class="hero-subtitle">
                         Создаю цифровые продукты, где функциональность встречается с визуальной гармонией. 
-                        Студентка 3 курса ИИТА СПБГУПТД.
+                        Студентка 3 курса ИИТА СПБГУПТД. Ищу стажировку в области IT-дизайна.
                     </p>
                     <div class="hero-buttons">
                         <a href="#portfolio" class="btn btn-primary">Смотреть работы</a>
@@ -56,9 +56,11 @@
                 </div>
                 <div class="hero-image">
                     <div class="image-frame">
-                        <div class="placeholder-image">
-                            <i class="fas fa-user"></i>
-                            <p>Ваше фото</p>
+                        <div class="design-icon">
+                            <i class="fas fa-palette"></i>
+                            <div class="icon-circle"></div>
+                            <div class="icon-circle"></div>
+                            <div class="icon-circle"></div>
                         </div>
                     </div>
                 </div>
@@ -123,12 +125,14 @@
                         <p class="portfolio-category">2D-платформер и шутер</p>
                         <p class="portfolio-description">
                             Игра в средневековом сеттинге с элементами платформера и шутера. 
-                            Разработана на Python с использованием библиотеки PyGame.
+                            Разработана на Python с использованием библиотеки PyGame. Включает систему боя, 
+                            инвентарь и несколько уровней сложности.
                         </p>
                         <div class="portfolio-tags">
                             <span class="tag">Python</span>
                             <span class="tag">Pygame</span>
                             <span class="tag">Геймдизайн</span>
+                            <span class="tag">2D графика</span>
                         </div>
                     </div>
                 </div>
@@ -144,31 +148,13 @@
                         <p class="portfolio-description">
                             Серия фотографий для корейского бренда косметики La'dor. 
                             Работа над композицией, светом и цветокоррекцией для создания привлекательного визуального контента.
+                            Фотографии использовались для социальных сетей бренда.
                         </p>
                         <div class="portfolio-tags">
                             <span class="tag">Photoshop</span>
                             <span class="tag">Фотография</span>
                             <span class="tag">Ретушь</span>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Проект 3: Будущий проект -->
-                <div class="portfolio-card">
-                    <div class="portfolio-image">
-                        <img src="images/project-3.jpg" alt="Макет нового проекта" class="portfolio-image-real">
-                    </div>
-                    <div class="portfolio-content">
-                        <h3>Интерактивный портфолио</h3>
-                        <p class="portfolio-category">Веб-дизайн</p>
-                        <p class="portfolio-description">
-                            Разработка интерактивного веб-портфолио с анимациями и современным дизайном. 
-                            Проект в процессе разработки.
-                        </p>
-                        <div class="portfolio-tags">
-                            <span class="tag">UI/UX</span>
-                            <span class="tag">Анимация</span>
-                            <span class="tag">Прототипирование</span>
+                            <span class="tag">Композиция</span>
                         </div>
                     </div>
                 </div>
