--- a/index.html
+++ b/index.html
@@ -36,37 +36,38 @@
     </header>
 
     <!-- Главный экран -->
-    <section id="hero" class="hero">
-        <div class="container">
-            <div class="hero-content">
-                <div class="hero-text">
-                    <h1 class="hero-title">
-                        <span class="title-line">IT-дизайнер</span>
-                        <span class="title-line">на стыке технологий</span>
-                        <span class="title-line">и эстетики</span>
-                    </h1>
-                    <p class="hero-subtitle">
-                        Создаю цифровые продукты, где функциональность встречается с визуальной гармонией. 
-                        Студентка 3 курса ИИТА СПБГУПТД. Ищу стажировку в области IT-дизайна.
-                    </p>
-                    <div class="hero-buttons">
-                        <a href="#portfolio" class="btn btn-primary">Смотреть работы</a>
-                        <a href="#contacts" class="btn btn-secondary">Связаться</a>
-                    </div>
+<section id="hero" class="hero">
+    <div class="container">
+        <div class="hero-content">
+            <div class="hero-text">
+                <h1 class="hero-title">
+                    <span class="title-line">IT-дизайнер</span>
+                    <span class="title-line">на стыке технологий</span>
+                    <span class="title-line">и эстетики</span>
+                </h1>
+                <p class="hero-subtitle">
+                    Создаю цифровые продукты, где функциональность встречается с визуальной гармонией. 
+                    Студентка 3 курса ИИТА СПБГУПТД. Ищу стажировку в области IT-дизайна.
+                </p>
+                <div class="hero-buttons">
+                    <a href="#portfolio" class="btn btn-primary">Смотреть работы</a>
+                    <a href="#contacts" class="btn btn-secondary">Связаться</a>
                 </div>
-                <div class="hero-image">
-                    <div class="image-frame">
-                        <div class="design-icon">
-                            <i class="fas fa-palette"></i>
-                            <div class="icon-circle"></div>
-                            <div class="icon-circle"></div>
-                            <div class="icon-circle"></div>
-                        </div>
+            </div>
+            <div class="hero-image">
+                <div class="design-icon-simple">
+                    <div class="icon-circle-static">
+                        <i class="fas fa-palette"></i>
+                    </div>
+                    <div class="icon-text">
+                        <p>IT-дизайн</p>
+                        <p>Python • Photoshop</p>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Архитектурный разделитель -->
     <div class="architectural-divider">
